examples/kubernetes/pvc.yaml
# Example Pod using the PVC
apiVersion: v1
kind: Pod
metadata:
  name: example-pod
  namespace: default
spec:
  containers:
    - name: example-pod
      image: nginx:latest
      volumeMounts:
        - name: example-volume
          mountPath: /data
  volumes:
    - name: example-volume
      persistentVolumeClaim:
        claimName: example-pvc
